# pytest-common-test-report-json

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  example.yml
ctrf/: BaseMetadataReport.py  CommonTestReportPlugin.py  Report.py  TestObject.py  main.py
plugin/: BaseMetadataReport.py  CommonTestReportPlugin.py  Report.py  TestObject.py  main.py
tests/: test_example.py  test_plugin.py
