[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [".github", "tests", "build", "dist", ".venv", "pytestomatio.egg-info", ".env", ".gitignore", "CHANGELOG.md"]

[project]
name = "pytest-ctrf"
version = "0.0.1"

dependencies = [
    "pytest>6.0.0",
]

authors = [
    { name = "Oleksii Ostapov" },
]
description = "Pytest plugin to generate json report in CTRF (Common Test Report Format)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Infopulse" = "https://infopulse.com/"
"Homepage" = "https://infopulse.com/pytest-ctrf"

[project.entry-points.pytest11]
pytestomatio = "plugin.main"